--- a/Views/Home/D1t.cshtml
+++ b/Views/Home/D1t.cshtml
@@ -6,8 +6,8 @@ ViewData["Title"] = "Диабет 1 типа";
     <div class="flex flex-wrap justify-center items-center gap-100 py-100 max-w-1700 h-full mx-auto">
         <img src="~/images/block-3-1.png" class="flex-1 max-h-580 object-cover">
         <div class="flex flex-col flex-1">
-            <h1 class="text-[#1654A4] text-3xl font-black text-center mb-50">Диабет 1 типа: что важно знать</h1>
-            <h2 class="text-[#1654A4] text-2xl font-black text-justify">
+            <h1 class="text-[#1654A4] text-3xl text-center mb-50">Диабет 1 типа: что важно знать</h1>
+            <h2 class="text-[#1654A4] text-2xl text-justify">
                 Диабет 1 типа — это хроническое аутоиммунное заболевание, при котором поджелудочная железа практически
                 перестает вырабатывать инсулин — гормон, необходимый для регулирования уровня сахара в крови. Чаще всего
                 диабет 1 типа диагностируется в детском или подростковом возрасте, но может проявиться и у взрослых.<br>
@@ -26,50 +26,7 @@ ViewData["Title"] = "Диабет 1 типа";
 </div>
 
 <div class="max-w-1300 mx-auto mt-140 px-16">
-    <p class="text-[#1654A4] whitespace-pre-wrap font-black text-4xl">
-        1. Официальные организации
-         1. Российская Диабетическая Ассоциация - <a class="underline" href="https://www.diabet.ru">www.diabet.ru</a>
-         2. ФГБУ "НМИЦ эндокринологии" - <a class="underline" href="https://endojournals.ru">endojournals.ru</a>
-         3. Минздрав РФ (раздел о диабете) - <a class="underline" href="https://minzdrav.gov.ru/ministry/61/22">minzdrav.gov.ru/ministry/61/22</a>
-        2. Образовательные проекты
-         1. Школа диабета 1 типа - <a class="underline" href="https://shkoladiabeta.ru/t1">shkoladiabeta.ru/t1</a>
-         2. Академия диабета - <a class="underline" href="https://diacademy.ru">diacademy.ru</a>
-         3. Проект "Правило 15" - <a class="underline" href="https://pravilo15.ru">pravilo15.ru</a>
-        3. Поддержка детей с СД1
-         1. Фонд "Быть вместе" - <a class="underline" href="https://beingtogether.ru">beingtogether.ru</a>
-         2. Проект "Диабет у детей" - <a class="underline" href="https://diabet-child.ru">diabet-child.ru</a>
-         3. Лагерь для детей с диабетом - <a class="underline" href="https://diabet-camp.ru">diabet-camp.ru</a>
-        4. Сообщества и форумы
-         1. Форум "Диа-клуб" - <a class="underline" href="https://diaclub.ru">diaclub.ru</a>
-         2. Группа ВК "Диабет 1 типа" - <a class="underline" href="https://vk.com/t1diabetes">vk.com/t1diabetes</a>
-         3. Telegram-чат "Диабет ON" - <a class="underline" href="https://t.me/diabet_on">t.me/diabet_on</a>
-        5. Технологии и гаджеты
-         1. CGM системы (российские поставщики) - <a class="underline" href="https://dexcom.ru">dexcom.ru</a>
-         2. Помповая терапия - <a class="underline" href="https://medtronic-diabetes.ru">medtronic-diabetes.ru</a>
-         3. Приложение "Диачек" - <a class="underline" href="https://diacheck.ru">diacheck.ru</a>
-        6. Правовая поддержка
-         1. Льготы для диабетиков - <a class="underline" href="https://socialnaya-podderzhka.ru">socialnaya-podderzhka.ru</a>
-         2. Центр защиты прав пациентов - <a class="underline" href="https://patientrights.ru">patientrights.ru</a>
-         3. Юридическая помощь РДА - <a class="underline" href="https://diabet.ru/yurist">diabet.ru/yurist</a>
-        7. Психологическая помощь
-         1. Горячая линия психпомощи - 8-800-333-44-34
-         2. Проект "Диабет и психика" - <a class="underline" href="https://diabet-psy.ru">diabet-psy.ru</a>
-         3. Чат поддержки в Telegram - <a class="underline" href="https://t.me/diabet_support">t.me/diabet_support</a>
-        8. Региональные центры
-         1. Московский диабетический центр - <a class="underline" href="https://mosdiabet.ru">mosdiabet.ru</a>
-         2. СПб диабетическое общество - <a class="underline" href="https://diabet-spb.ru">diabet-spb.ru</a>
-         3. Карта диабет-центров РФ - <a class="underline" href="https://yandex.ru/maps/diabetes">yandex.ru/maps/diabetes</a>
-        9. Товары для диабетиков
-         1. Интернет-магазин "Диабетика" - <a class="underline" href="https://diabetica.ru">diabetica.ru</a>
-         2. Аптека "Диабет" - <a class="underline" href="https://aptekadiabet.ru">aptekadiabet.ru</a>
-         3. Ортопедическая обувь - <a class="underline" href="https://ortocomfort.ru">ortocomfort.ru</a>
-        10. Мобильные приложения
-         1. Диабет под контролем - d<a class="underline" href="https://iabet-control.ru">iabet-control.ru</a>
-         2. Мой глюкометр - <a class="underline" href="https://play.google.com/store/apps/details?id=ru.diabet.myglukometer">play.google.com/store/apps/details?id=ru.diabet.myglukometer</a>
-         3. DiaNot (напоминания) - <a class="underline" href="https://dianot.ru">dianot.ru</a>
-        11. Экстренная помощь
-         1. Горячая линия РДА - +7 (495) 505-30-30
-         2. Скорая помощь - 112 (при тяжелой гипогликемии)</p>
+    <p class="text-[#1654A4] whitespace-pre-wrap text-4xl">@Html.Raw(ViewBag.HTMLBody)</p>
 </div>
 
 <h1 class=" bg-[url('/images/events/1.jpg')] h-400 bg-center bg-cover flex justify-center items-center text-white
