--- a/Views/Home/D2t.cshtml
+++ b/Views/Home/D2t.cshtml
@@ -6,8 +6,8 @@ ViewData["Title"] = "Диабет 2 типа";
     <div class="flex flex-wrap justify-center items-center gap-100 py-100 max-w-1700 h-full mx-auto">
         <img src="~/images/block-3-2.png" class="flex-1 max-h-580 object-cover">
         <div class="flex flex-col flex-1">
-            <h1 class="text-[#1654A4] text-3xl font-black text-center mb-50">Диабет 2 типа: ключевые аспекты</h1>
-            <h2 class="text-[#1654A4] text-2xl font-black text-justify">
+            <h1 class="text-[#1654A4] text-3xl text-center mb-50">Диабет 2 типа: ключевые аспекты</h1>
+            <h2 class="text-[#1654A4] text-2xl text-justify">
                 Диабет 2 типа — это наиболее распространенная форма диабета, которая часто развивается у взрослых, но
                 может также возникать у детей и подростков. Это заболевание связано с инсулинорезистентностью, когда
                 клетки организма не могут эффективно использовать инсулин, что приводит к повышению уровня сахара в
@@ -26,46 +26,7 @@ ViewData["Title"] = "Диабет 2 типа";
 </div>
 
 <div class="max-w-1300 mx-auto mt-140 px-16">
-    <p class="text-[#1654A4] whitespace-pre-wrap font-black text-4xl">
-        1. Официальные и медицинские ресурсы
-         1. Минздрав РФ (раздел о диабете) - <a class="underline" href="https://minzdrav.gov.ru/ministry/61/22">minzdrav.gov.ru/ministry/61/22</a>
-         2. Российская Диабетическая Ассоциация - <a class="underline" href="https://diabet.ru">diabet.ru</a>
-         3. ФГБУ "НМИЦ эндокринологии" - <a class="underline" href="https://endojournals.ru">endojournals.ru</a>
-         4. Горячая линия Минздрава по диабету - 8-800-200-0-200
-        2. Образовательные проекты
-         1. Школа диабета онлайн - <a class="underline" href="https://shkoladiabeta.ru">shkoladiabeta.ru</a>
-         2. Проект "Диабет.рф" - <a class="underline" href="https://диабет.рф">диабет.рф</a>
-         3. Академия диабета - <a class="underline" href="https://diacademy.ru">diacademy.ru</a>
-         4. Вебинары для пациентов - <a class="underline" href="https://diabet-school.ru">diabet-school.ru</a>
-        3. Сообщества и форумы
-         1. Форум "Диа-клуб" - <a class="underline" href="https://diaclub.ru">diaclub.ru</a>
-         2. Сообщество ВК "Диабет 2 типа" - <a class="underline" href="https://vk.com/diabet2type">vk.com/diabet2type</a>
-         3. Telegram-чат "Диабет 2 типа" - <a class="underline" href="https://t.me/diabet2chat">t.me/diabet2chat</a>
-         4. Фонд "Диабет" - <a class="underline" href="https://diabetfond.ru">diabetfond.ru</a>
-        4. Питание и образ жизни
-         1. Кулинарный портал для диабетиков - <a class="underline" href="https://diabet-recept.ru">diabet-recept.ru</a>
-         2. Рецепты от РДА - <a class="underline" href="https://diabet.ru/cooking">diabet.ru/cooking</a>
-         3. Спорт при диабете - <a class="underline" href="https://diabetik.guru/sport">diabetik.guru/sport</a>
-        5. Правовая поддержка
-         1. Льготы для диабетиков - <a class="underline" href="https://socialnaya-podderzhka.ru">socialnaya-podderzhka.ru</a>
-         2. Портал госуслуг (медицинские услуги) - <a class="underline" href="https://gosuslugi.ru/health">gosuslugi.ru/health</a>
-         3. Центр защиты прав пациентов - <a class="underline" href="https://patientrights.ru">patientrights.ru</a>
-        6. Товары для диабетиков
-         1. Интернет-магазин "Диабетика" - <a class="underline" href="https://diabetica.ru">diabetica.ru</a>
-         2. Аптека "Диабет" - <a class="underline" href="https://aptekadiabet.ru">aptekadiabet.ru</a>
-         3. Ортопедическая обувь - <a class="underline" href="https://ortocomfort.ru">ortocomfort.ru</a>
-        7. Мобильные приложения
-         1. Диабет под контролем - <a class="underline" href="https://diabet-control.ru">diabet-control.ru</a>
-         2. Дневник диабетика - <a class="underline" href="https://diacheck.ru">diacheck.ru</a>
-         3. Мой глюкометр - <a class="underline" href="https://play.google.com/store/apps/details?id=ru.diabet.myglukometer">play.google.com/store/apps/details?<br>id=ru.diabet.myglukometer</a>
-        8. Психологическая помощь
-         1. Горячая линия психологической помощи - 8-800-333-44-34
-         2. Проект "Психология диабета" - <a class="underline" href="https://diabet-psy.ru">diabet-psy.ru</a>
-         3. Чат поддержки в Telegram - <a class="underline" href="https://t.me/diabet_support">t.me/diabet_support</a>
-        9. Региональные центры
-         1. Московский диабетический центр - <a class="underline" href="https://mosdiabet.ru">mosdiabet.ru</a>
-         2. СПб диабетическое общество - <a class="underline" href="https://diabet-spb.ru">diabet-spb.ru</a>
-         3. Карта диабет-центров РФ - <a class="underline" href="https://yandex.ru/maps/diabetes">yandex.ru/maps/diabetes</a>
+    <p class="text-[#1654A4] whitespace-pre-wrap text-4xl">@Html.Raw(ViewBag.HTMLBody)</p>
 </div>
 
 <h1 class=" bg-[url('/images/events/1.jpg')] h-400 bg-center bg-cover flex justify-center items-center text-white
