--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -53,7 +53,7 @@ ViewData["Title"] = "Авторизация";
         @Html.Label("Password", "Пароль")
         @Html.Password("Password", "")
         @Html.Hidden("ReturnUrl", Context.Request.Query["ReturnUrl"])
-        <button class="bg-linear-to-r from-[#3569CF] to-[#5566BA] text-white cursor-pointer py-8">Отправить</button>
+        <button class="bg-linear-to-r from-[#3569CF] to-[#5566BA] text-white cursor-pointer py-8">Войти</button>
         }
     </div>
 </div>
