--- a/Views/Home/Contacts.cshtml
+++ b/Views/Home/Contacts.cshtml
@@ -5,16 +5,17 @@ ViewData["Title"] = "Контакты";
 <div class="max-w-1150 mx-auto mt-125 mb-450 flex flex-col gap-32 px-16">
     <h1 class="text-5xl">Контакты</h1>
     <h2 class="text-3xl text-[#1654A4]">Остались вопросы? Если да то мы ждём от вас заявки.</h2>
-    <div class="flex gap-80">
+    <div class="flex gap-80 flex-col md:flex-row">
         @using(Html.BeginForm("RegisterQuestion", "Home", FormMethod.Post, new {@class = "flex flex-col gap-16"})) {
-        <input name="name" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
+        <input name="name" type="text" maxlength="64" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
             placeholder="Имя(обязательно)">
-        <input name="email" type="email" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
+        <input name="email" type="email" maxlength="64" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
             placeholder="Электронная почта(обязательно)">
-        <input name="question" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
-            placeholder="Пишите вопросы.">
-        <label for="check-afert" class="flex items-start gap-10 text-lg text-[#1654A4]"><input name="check" id="check-afert" required type="checkbox"
-                class="block cursor-pointer max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ
+        <input name="question" type="text" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
+            placeholder="Пишите вопросы." maxlength="128">
+        <label for="check-afert" class="flex items-start gap-10 text-lg text-[#1654A4]"><input name="check"
+                id="check-afert" required type="checkbox"
+                class="block cursor-pointer min-w-35 min-h-35 max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ
             СВОИ ДАННЫЕ, ВЫ СОГЛАШАЕТЕСЬ НА ПОЛУЧЕНИЕ СООБЩЕНИЙ ПО
             ЭЛЕКТРОННОЙ ПОЧТЕ. ВЫ МОЖЕТЕ
             ОТКАЗАТЬСЯ ОТ ПОДПИСКИ В ЛЮБОЕ ВРЕМЯ</label>
