--- a/Views/Home/Soveti.cshtml
+++ b/Views/Home/Soveti.cshtml
@@ -6,9 +6,9 @@ ViewData["Title"] = "Поддержка";
     <div class="flex flex-wrap justify-center items-center gap-100 py-100 max-w-1700 h-full mx-auto">
         <img src="~/images/block-3-3.png" class="flex-1 max-h-580 object-cover">
         <div class="flex flex-col flex-1">
-            <h1 class="text-[#1654A4] text-3xl font-black text-center mb-50">Поддержка близких людей: важная часть жизни
+            <h1 class="text-[#1654A4] text-3xl text-center mb-50">Поддержка близких людей: важная часть жизни
                 с диабетом</h1>
-            <h2 class="text-[#1654A4] text-2xl font-black text-justify">
+            <h2 class="text-[#1654A4] text-2xl text-justify">
                 Жизнь с диабетом — это вызов не только для самого пациента, но и для его близких. Родные и друзья играют
                 ключевую роль в поддержке, понимании и создании благоприятной атмосферы для эффективного управления
                 заболеванием.<br>
@@ -25,46 +25,9 @@ ViewData["Title"] = "Поддержка";
 </div>
 
 <div class="max-w-1300 mx-auto mt-140 px-16">
-    <h1 class="text-4xl font-black text-center mb-80 text-[#1654A4]">Как поддержать близкого с диабетом: забота,
+    <h1 class="text-4xl text-center mb-80 text-[#1654A4]">Как поддержать близкого с диабетом: забота,
         понимание, участие</h1>
-    <p class="text-[#1654A4] text-3xl font-black">
-        <br>📌 Как помочь близкому с диабетом?
-        <br>✅ Изучите основы болезни – понимание симптомов гипо-/гипергликемии, принципов питания, приема лекарств.
-        <br>✅ Не
-        давите, но будьте рядом – диабет требует дисциплины, но критика только вредит.<br>✅ Помогите с мониторингом
-        сахара –
-        напоминайте о замерах, если человек забывает.<br>✅ Поддержите в сложные моменты – стресс влияет на уровень
-        глюкозы.
-        <br>🔗 Полезные ресурсы для родственников
-        <br>🇷🇺 На русском языке
-        <br>1. «Школа диабета» (курсы для близких)
-       <br> 🔗 <a class="underline" href="https://shkoladiabeta.ru">shkoladiabeta.ru</a>
-        <br>2. Фонд «Диабет» (поддержка семей)
-       <br> 🔗 <a class="underline" href="https://diabetfond.ru">diabetfond.ru</a>
-       <br> 3. Группы в соцсетях
-    </p>
-    <ul class="list-disc text-[#1654A4] text-3xl font-black pl-64">
-        <li><a class="underline" href="https://vk.com/club144782633"> ВК: «Диабет. Взрослые и дети»</a></li>
-        <li><a class="underline" href="https://t.me/diabet_support_chat"> Telegram-чат для родственников</a></li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl font-black">
-        4. Российская Диабетическая Ассоциация (консультации)<br>🔗 <a class="underline" href="https://diabet.ru">diabet.ru</a>
-        <br>🌍 Международные ресурсы
-       <br> 1. Beyond Type 1 (для семей)<br>🔗 <a class="underline" href="https://beyondtype1.org/family">beyondtype.&shy;org/family</a>
-       <br> 2. Diabetes UK (руководство для близких)<br>🔗 <a class="underline" href="https://diabetes.org.uk/guide-to-diabetes/family-and-friends">diabetes.org.&shy;uk/guide-to-diabetes/family-and-friends</a>
-       <br> 3. JDRF (поддержка родителей детей с СД1)<br>🔗 <a class="underline" href="https://jdrf.org/family-support">jdrf.org/family-support</a>
-        <br>📱 Приложения для совместного контроля
-    </p>
-    <ul class="list-disc text-[#1654A4] text-3xl font-black pl-32">
-        <li>Glucose Buddy – дневник сахаров с доступом для родных.</li>
-        <li>DiaCompanion &shy;(РФ) – напоминания о лекарствах и замерах.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl font-black"> ❗ Важно</p>
-    <ul class="list-disc text-[#1654A4] text-3xl font-black pl-32">
-        <li> Не вините себя – диабет не возникает из-за ошибок близких.</li>
-        <li> Не игнорируйте эмоции – если человек с диабетом грустит или злится, это нормально.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl font-black">Горячая линия психологической помощи (РФ): 8 (800) 333-44-34</p>
+    <p class="text-[#1654A4] whitespace-pre-wrap text-4xl">@Html.Raw(ViewBag.HTMLBody)</p>
 </div>
 
 <h1 class=" bg-[url('/images/events/1.jpg')] h-400 bg-center bg-cover flex justify-center items-center text-white
