--- a/Views/Home/Zapis.cshtml
+++ b/Views/Home/Zapis.cshtml
@@ -7,9 +7,9 @@ ViewData["Title"] = "Запись";
     <h2 class="text-3xl text-[#1654A4]">Мы ждём от вас заявки.</h2>
     <div class="flex gap-80 flex-col md:flex-row">
         @using(Html.BeginForm("RegisterCallback", "Home", FormMethod.Post, new {@class = "flex flex-col gap-16"})) {
-        <input required name="name" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
+        <input required name="name" type="text" maxlength="64" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
             placeholder="Имя(обязательно)">
-        <input required type="email" name="email" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
+        <input required type="email" name="email" maxlength="64" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
             placeholder="Электронная почта(обязательно)">
         <select name="place" required class="bg-white cursor-pointer px-50 py-25 text-[#1654A4] text-sm sm:text-2xl">
             @foreach (var item in ViewBag.Places) {
@@ -17,7 +17,7 @@ ViewData["Title"] = "Запись";
             }
         </select>
         <label for="check-afert" class="flex items-start gap-10 text-lg text-[#1654A4]"><input name="check" required type="checkbox" id="check-afert"
-                class="block cursor-pointer max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ
+                class="block cursor-pointer min-w-35 min-h-35 max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ
             СВОИ ДАННЫЕ, ВЫ СОГЛАШАЕТЕСЬ НА ПОЛУЧЕНИЕ СООБЩЕНИЙ ПО
             ЭЛЕКТРОННОЙ ПОЧТЕ. ВЫ МОЖЕТЕ
             ОТКАЗАТЬСЯ ОТ ПОДПИСКИ В ЛЮБОЕ ВРЕМЯ</label>
