--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using kaban
 @using kaban.Models
 @using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
